--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,8 +12,8 @@ form.edit_user {
   }
 
   .btn {
-    width: 267px;
-    margin-top: 24px;
+    padding: 12px;
+    font-size: 18px;
 
     &:disabled {
       color: #eee;
