--- a/app/views/users/update_mobile.html.erb
+++ b/app/views/users/update_mobile.html.erb
@@ -1,14 +1,17 @@
 <div class="bg-snow pb2 pt2 update-mobile">
 
   <div class="container-small">
-    <h3>请绑定您的手机号</h3>
+    <h3 style="margin-bottom:8px">绑定手机号</h3>
+    <div class="text-muted mb3" style="mb2">请填写真实手机号，以免影响正常使用</div>
 
     <% if current_user %>
 
       <%= form_for @current_user do |f| %>
-        <div><%= f.text_field :mobile, placeholder: '手机号', autofocus: true %></div>
+        <div>
+          <%= f.text_field :mobile, placeholder: '手机号', autofocus: true %>
+          <%= f.submit '保 存', class: 'btn' %>
+        </div>
         <div class="error">手机号格式错误</div>
-        <%= f.submit '保存手机号', class: 'btn', style: 'font-size: 14px;' %>
       <% end -%>
 
     <% end -%>
