--- a/app/views/admin/user_groups/index.html.erb
+++ b/app/views/admin/user_groups/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <th>组名</th>
     <th>权限</th>
-    <th>权限有效期</th>
+    <th style="width: 150px">权限有效期</th>
     <th style="width: 75px">学生人数</th>
     <th style="width: 60px">操作</th>
   </thead>
