add info to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     (function() {
       var hm = document.createElement("script");
       hm.src = "https://hm.baidu.com/hm.js?4e2f29d6b2044f5e23ce2309ec935ae7";
-      var s = document.getElementsByTagName("script")[0]; 
+      var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
@@ -56,14 +56,16 @@
           <p>友情链接：
             <a class="mx1" href="http://www.mba.com/global">GMAC</a>
             <a class="mx1" href="https://gmat770.ke.qq.com/">腾讯课堂</a>
+            <a class="mx1" href="http://study.163.com/provider/1028149114/index.htm
+">网易云课堂</a>
             <a class="mx1" href="http://e.youku.com/o/EOMTY2OA==">Youku学堂</a>
             <a class="mx1" href="http://www.iqiyi.com/u/2403845214">爱奇艺</a>
             <a class="mx1" href="http://www.sharewithu.com/mall/space.php?type=course&id=820890">尚友商城</a>
             <a class="mx1" href="http://edu.yy.com/agency/33137#tab0">YY教育</a>
             <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
+          <p>联系地址：海淀区知春路盈都大厦C座3单元6A &nbsp;&nbsp;&nbsp; 官方邮箱：gmat770cg@qq.com&nbsp;&nbsp;&nbsp;联系电话：010-58734600 &nbsp;&nbsp;&nbsp; 服务时间：周一至周五 09:00 &ndash; 18:00</p>
           <p>&copy; 2016 &ndash; 2017 北京思晨教育科技有限公司 京ICP备16060483号-1</p>
-          <p>联系地址：海淀区知春路盈都大厦C座3单元6A &nbsp;&nbsp;&nbsp; 联系方式：010-58734600 &nbsp;&nbsp;&nbsp; 服务时间：周一至周五 09:00 &ndash; 18:00</p>
       </div>
     </footer>
 
