--- a/app/views/admin/user_groups/index.html.erb
+++ b/app/views/admin/user_groups/index.html.erb
@@ -1,12 +1,12 @@
 <h4>用户组</h4>
 <a href="<%= new_admin_user_group_path %>" class="btn btn-primary pull-right" style="margin-top: -45px;">新建用户组</a>
-<table class="table table-bordered">
+<table class="table table-bordered user-group-table">
   <thead>
     <th>组名</th>
     <th>权限</th>
     <th style="width: 150px">权限有效期</th>
     <th style="width: 75px">学生人数</th>
-    <th style="width: 60px">操作</th>
+    <th style="width: 100px">操作</th>
   </thead>
   <tbody>
     <% @groups.each do |g| %>
@@ -24,9 +24,12 @@
           <% end -%>
         </td>
         <td>
-          <%= link_to '编辑', edit_admin_user_group_path(g) %>
+          <%= link_to '编辑', edit_admin_user_group_path(g) %>&nbsp;&nbsp;&nbsp;<%= link_to '删除', '#', class: 'js-delete-user-group' %>
         </td>
       </tr>
     <% end -%>
   </tbody>
 </table>
+
+
+<%= render partial: "admin/confirm_delete_user_group_modal", locals: { tag: @tag } %>
