--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <nav class="left ml2">
           <ul>
             <li><a href="/">首页</a></li>
-            <li><a class="<%= (controller_name == 'courses' && action_name.include?('free')) ? 'active' : '' %>" href="/courses/free">公开课</a></li>
+            <li><a class="<%= (controller_name == 'courses' && action_name.include?('free')) ? 'active' : '' %>" href="/courses/free">免费公开课</a></li>
             <li><a class="<%= (controller_name == 'courses' && action_name == 'index') ? 'active' : '' %>" href="/courses">精品课</a></li>
             <li><a class="<%= (controller_name == 'welcome' && action_name == 'vip') ? 'active' : '' %>" href="/welcome/vip">一对一</a></li>
             <li><a class="<%= (controller_name == 'exercises') ? 'active' : '' %>" href="/exercises">练习</a></li>
