--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -192,11 +192,31 @@ nav li a:hover, nav li a.active,
 }
 
 .course-item {
-  box-shadow: 1px 1px 4px rgba(0,0,0,.1);
-}
+  width: 285px;
+  margin-right: 16px;
+  position: relative;
 
-.course-item img {
-  display: block;
+  &:nth-child(4n) {
+    margin-right: 0;
+  }
+
+  a.h4 {
+    display: block;
+    max-height: 24px;
+    overflow: hidden;
+    color: black;
+    font-weight: bold;
+  }
+
+  .coming-soon {
+    background: #dc2b2b;
+    color: white;
+    position: absolute;
+    top: 8px;
+    left: -4px;
+    padding: 4px 8px;
+    border-radius: 0 20px 20px 0;
+  }
 }
 
 .teacher-intro {
@@ -355,6 +375,7 @@ nav li a:hover, nav li a.active,
 /* courses related */
 .courses {
   padding-top: 16px;
+  min-height: 600px;
 }
 
 .apply-course {
@@ -369,15 +390,14 @@ nav li a:hover, nav li a.active,
 
 .filters a {
   display: inline-block;
-  margin-left: 1em;
+  margin: 0 16px;
   cursor: pointer;
   color: #333;
 }
 
 .filters a.active {
-  background-color: #9A4015;
-  padding: 3px 5px;
-  border-radius: 4px;
+  background-color: #749d1f;
+  padding: 3px 8px;
   color: white;
 }
 
@@ -508,7 +528,6 @@ nav li a:hover, nav li a.active,
 
 .card {
   background: white;
-  box-shadow: 1px 1px 4px rgba(0,0,0,.1);
   padding: 20px;
 }
 
