--- a/app/views/courses/free.html.erb
+++ b/app/views/courses/free.html.erb
@@ -1,15 +1,8 @@
 <div class="bg-snow pb2">
 
-  <div class="header-margin pb2">
-    <div class="container-narrow clearfix">
-      <%= link_to '即将开始', free_courses_path, class: link_class(!@archive) %>
-      <%= link_to '在线回顾', free_courses_archive_path, class: link_class(@archive) %>
-    </div>
-  </div>
-
-
-  <div class="container-narrow">
-    <div class="clearfix card right-align filters">
+  <div class="container header-margin pt2">
+    <div class="clearfix card filters">
+      <span class="gray mr2">筛选科目</span>
       <a href="<%= @archive ? '/courses/free/archive' : '/courses/free' %>" class="<%= (@subject == "" || @subject.nil?) ? "active" : "" %>">全部</a>
       <% Course.subjects.each_with_index do |subject, index| %>
       <a href="<%= free_courses_subject_url(index, @archive) %>" class="<%= (index.to_s == @subject) ? 'active' : '' %>"><%= subject %></a>
@@ -17,35 +10,14 @@
     </div>
   </div>
 
-  <div class="courses">
-    <div class="clearfix max-width-3 mx-auto">
-      <% @courses.each do |course| %>
-      <div class="course-item bg-white p2 mb1 clearfix">
-        <div class="left">
-          <a href="<%= course_show_path(course, from: 'free') %>">
-            <img src="<%= course.img_url %>?imageView2/1/w/240/h/145" width="240" height="145">
-          </a>
-        </div>
-        <div class="left pl3" style="width:59%">
-          <a href="<%= course_show_path(course, from: 'free') %>" class="h3 black"><%= course.title %></a>
-          <div class="gray h5 mt1">
-            <div>讲师: <%= course.teacher.nil? ? '' : course.teacher.name %></div>
-            <div>开课时间：<%= course.start_time.to_formatted_s(:date_and_time)%></div>
-          </div>
-          <div class="mt2">
-            <a href="<%= course_show_path(course, from: 'free') %>" class="btn btn-primary">查看详情</a>
-          </div>
-        </div>
-        <div class="right">
-          <%= image_tag "#{course.subject_name}.png", width: 55, height: 37 %>
-        </div>
-      </div>
+  <div class="courses clearfix mb2">
+    <div class="container">
+      <% if @courses.count > 0 %>
+        <%= render @courses %>
+      <% else %>
+        <div class="gray p4 center h3">没有课程</div>
       <% end -%>
     </div>
-  </div>
-
-  <div class="container-narrow">
-    <%= will_paginate @courses, previous_label: "«", next_label: "»" %>
   </div>
 
 </div>
