--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,4 +1,4 @@
-<div class="course-item left bg-white p2 mb1 clearfix">
+<div class="course-item left bg-white p2 mb2 clearfix">
   <div class="mb1">
     <a href="<%= course_show_path(course, from: 'free') %>">
       <img src="<%= course.img_url %>?imageView2/1/w/253/h/151" width="253" height="151">
@@ -9,6 +9,9 @@
     <div class="gray h5 mt1">
       <div>讲师: <%= course.teacher.nil? ? '' : course.teacher.name %></div>
       <div>开课时间：<%= course.start_time.to_formatted_s(:date_and_time)%></div>
+      <% if course.fee.present? && course.fee > 0 %>
+        <div>¥ <strong class="pink h2"><%= course.fee %></strong> 元/人</div>
+      <% end -%>
     </div>
   </div>
   <% if course.start_time > DateTime.now %>
