--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -216,6 +216,7 @@ nav li a:hover, nav li a.active,
     left: -4px;
     padding: 4px 8px;
     border-radius: 0 20px 20px 0;
+    box-shadow: 1px 2px 3px rgba(0,0,0,.2);
   }
 }
 
