--- a/app/views/admin/users/_user_list.html.erb
+++ b/app/views/admin/users/_user_list.html.erb
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th></th>
+      <th>用户ID</th>
       <th>用户昵称</th>
       <th>性别</th>
       <th>注册时间</th>
@@ -13,6 +14,7 @@
     <% users.each do |user| %>
       <tr data-id="<%= user.id %>">
         <td><input type="checkbox"></td>
+        <td><%= user.id %></td>
         <td><%= user.nickname %></td>
         <td><%= (user.sex == 1) ? '男' : '女' %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
