add check permission to help debug

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -40,3 +40,9 @@
     </td>
   </tr>
 </table>
+
+<div>
+  <input type="text" name="exercise-id" class="form-control" placeholder="输入题目ID" style="width: 400px">
+  <p class="js-permission-result"></p>
+  <button class="btn btn-primary js-check-permission" data-id="<%= @user.id %>">查看权限</button>
+</div>
