--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -102,6 +102,14 @@
   </div>
 
   <div class="form-group">
+    <label for="is_hidden" class="col-sm-2 control-label">隐藏课程</label>
+    <div class="col-sm-5">
+      <%= f.check_box :is_hidden, class: 'form-control' %>
+    </div>
+  </div>
+
+
+  <div class="form-group">
     <div class="col-sm-10 col-sm-offset-2">
       <%= f.submit '保存', class: 'btn btn-primary' %>
     </div>
