--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -9,6 +9,7 @@
     <div class="gray h5 mt1">
       <div>讲师: <%= course.teacher.nil? ? '' : course.teacher.name %></div>
       <div>开课时间：<%= course.start_time.to_formatted_s(:date_and_time)%></div>
+      <div>结束时间：<%= course.end_time.to_formatted_s(:date_and_time)%></div>
       <% if course.fee.present? && course.fee > 0 %>
         <div>¥ <strong class="pink h2"><%= course.fee %></strong> 元/人</div>
       <% end -%>
