--- a/app/views/welcome/vip.html.erb
+++ b/app/views/welcome/vip.html.erb
@@ -81,9 +81,9 @@
   <h2 class="center">如何报名</h2>
   <div class="container">
     <div class="card center">
-      <p>请添加长工微信报名，详情可电话咨询。</p>
+      <p>请添加小工微信咨询详情，接受电话咨询。</p>
       <p>
-        <%= image_tag "qrcode.png", width: 600 %>
+        <%= image_tag "qrcode.jpg", width: 600 %>
       </p>
     </div>
   </div>
