fix user group qrcode

--- a/app/views/admin/user_groups/_qrcode_modal.html.erb
+++ b/app/views/admin/user_groups/_qrcode_modal.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title">二维码</h4>
       </div>
       <div class="modal-body text-center">
-        <h3>用户组：逻辑小班20170908</h3>
+        <h3>用户组：<span class="js-group-name"></span></h3>
         <p class="text-muted">学生可以通过扫描此二维码加入该用户组</p>
         <p id="qrcode-container" style="margin: 10px auto; width: 256px"></p>
         <p id="text"></p>
