add user to group when logging in

--- a/app/views/temp_users/show.html.erb
+++ b/app/views/temp_users/show.html.erb
@@ -7,7 +7,7 @@
     <%= image_tag 'http://oya5a097g.bkt.clouddn.com/check.png', width: 100 %>
   </p>
   <p>您已经加入群：<%= @user_group.name %></p>
-  <p class="text-muted">请在下次登录网站时绑定您的名字和手机号</p>
+  <p class="text-muted">请在下次登录网站时绑定您的手机号</p>
   <ul>
     <li><span>名字：</span><%= @temp_user.name %></li>
     <li><span>手机号：</span><%= @temp_user.mobile %></li>
