--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,7 @@ form.edit_user {
   [type=text] {
     padding: 12px;
     font-size: 18px;
+    width: 60%;
   }
 
   .error {
@@ -14,6 +15,7 @@ form.edit_user {
   .btn {
     padding: 12px;
     font-size: 18px;
+    width: 60%;
 
     &:disabled {
       color: #eee;
