--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -13,12 +13,12 @@
     <div class="container">
       <% 10.times do |exam| %>
         <div class="left bg-white p2 mt2 mb2 clearfix" style="margin-right: 16px">
-          <a href="#" class="h4">PREP模考1</a>
+          <%= link_to 'PREP模考1', exam_path(1), class: 'h4' %>
           <div class="h5 py1 gray">
-            <div>系列：GWD</div>
-            <div>练习人数：80</div>
+            <div>系列: GWD</div>
+            <div>练习人数: 80</div>
             <div class="gray">
-              <span>平均错题数量：</span>
+              <span>平均错题数: </span>
               <span>Verbal 4.5</span>
               <span>Quant 10.2</span>
             </div>
