--- a/app/assets/stylesheets/exam_layout.scss
+++ b/app/assets/stylesheets/exam_layout.scss
@@ -1,23 +1,7 @@
+//= require exams_controller
+
 html {
   height: 100%;
   background: url(http://oya5a097g.bkt.clouddn.com/bg.jpg);
   font-family: Tahoma,Geneva,"微软雅黑",sans-serif;
-}
-
-.exam-main {
-  max-width: 1024px;
-  min-width: 1000px;
-  width: 100%;
-  height: 100%;
-  max-height: 768px;
-  background: #006eae;
-  margin: 0 auto;
-
-  .header {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 45px;
-    padding-left: 8px;
-    color: white;
-  }
 }
