--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the exams_controller controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.exam-main {
+  max-width: 1024px;
+  min-width: 1000px;
+  width: 100%;
+  height: 100%;
+  max-height: 768px;
+  background: #006eae;
+  margin: 0 auto;
+  position: relative;
+
+  .header {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 45px;
+    padding-left: 8px;
+    color: white;
+  }
+}
