exam start page

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,4 +1,39 @@
 <div class="exam-main">
   <div class="header">[练习]SC-OG：第1-20题</div>
+  <div class="top-bar"></div>
+  <div class="content">
+    <h1>欢迎使用 GMAT770 模考系统</h1>
+    <form>
+      <div>
+        <h2>选择模考题目</h2>
+        <div class="form-control">
+          <input type="checkbox" name="" checked> Verbal (共12题)
+        </div>
+        <div class="form-control">
+          <input type="checkbox" name="" checked> Quant (共20题)
+        </div>
+      </div>
+      <div>
+        <h2>选择考试顺序</h2>
+        <div class="form-control">
+          <input type="radio" name="seq" checked> V -> Q
+          &nbsp;&nbsp;&nbsp;
+          <input type="radio" name="seq"> Q -> V
+        </div>
+      </div>
 
+      <input type="submit" name="" value="开始考试">
+    </form>
+  </div>
+  <div class="tips">建议：模考期间建议您将可能给您考试带来干扰的设备或软件调至静音状态。</div>
+  <div class="bottom-bar">
+    <div class="btn-help">
+      <i></i>
+      <span><u>H</u>elp</span>
+    </div>
+    <div class="btn-end">
+      <i></i>
+      <span><u>E</u>nd Exam</span>
+    </div>
+  </div>
 </div>
