--- a/app/assets/stylesheets/exam_layout.scss
+++ b/app/assets/stylesheets/exam_layout.scss
@@ -1,7 +1,18 @@
 //= require exams_controller
 
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
   background: url(http://oya5a097g.bkt.clouddn.com/bg.jpg);
-  font-family: Tahoma,Geneva,"微软雅黑",sans-serif;
+  font-family: Tahoma, "Helvetica Neue", "微软雅黑", sans-serif;
+}
+
+body { 
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
