--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -1,12 +1,14 @@
+$exam_blue: #006eae;
+
 .exam-main {
   max-width: 1024px;
   min-width: 1000px;
   width: 100%;
-  height: 100%;
   max-height: 768px;
-  background: #006eae;
-  margin: 0 auto;
+  height: 100%;
+  background: $exam_blue;
   position: relative;
+  margin: 0 auto;
 
   .header {
     font-size: 18px;
@@ -14,5 +16,119 @@
     line-height: 45px;
     padding-left: 8px;
     color: white;
+  }
+
+  .top-bar {
+    height: 31px;
+    background: #7eafe1;
+    border: 2px solid #fff;
+    color: #fff;
+    margin-right: 20px;
+  }
+
+  .content {
+    padding: 0 24px;
+    margin: 0 20px;
+    color: #333;
+    background: #fff;
+    overflow-x: auto;
+    overflow-y: auto;
+
+    h1 {
+      margin: 30px 0 20px 0;
+      font-size: 20px;
+      font-weight: normal;
+      text-align: center;
+    }
+
+    h2 {
+      line-height: 28px;
+      padding-bottom: 8px;
+      margin-bottom: 0;
+      margin-top: 32px;
+      font-size: 16px;
+      font-weight: normal;
+      border-bottom: 1px solid #e5e5e5;
+    }
+
+    .form-control {
+      padding: 12px 0;
+      border-bottom: 1px solid #e5e5e5;
+    }
+
+    input[type=submit] {
+      background: $exam_blue;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      display: block;
+      margin: 30px auto;
+      cursor: pointer;
+
+      &:hover {
+        background: #0889d4;
+      }
+    }
+  }
+  .tips {
+    font-size: 12px;
+    color: #999;
+    background: white;
+    padding: 40px 0 12px 20px;
+    margin: 0 20px;
+  }
+
+  .bottom-bar {
+    height: 36px;
+    line-height: 36px;
+    color: white;
+    font-size: 18px;
+    margin-left: 20px;
+    border-left: 2px solid white;
+
+    > div {
+      float: left;
+      text-align: center;
+      border-right: 2px solid white;
+
+      &:hover {
+        color: #fefe00;
+        cursor: pointer;
+      }
+    }
+
+    i {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      vertical-align: text-bottom;
+    }
+
+    .btn-help {
+      width: 80px;
+
+      i {
+        background-image: url(http://oya5a097g.bkt.clouddn.com/help.png);
+      }
+    }
+
+    .btn-help:hover i {
+      background-image: url(http://oya5a097g.bkt.clouddn.com/help-hover.png);
+    }
+
+    .btn-end {
+      width: 130px;
+
+      i {
+        background-image: url(http://oya5a097g.bkt.clouddn.com/quit.png);
+      }
+    }
+
+    .btn-end:hover i {
+      background-image: url(http://oya5a097g.bkt.clouddn.com/quit-hover.png);
+    }
   }
 }
