--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -22,16 +22,17 @@
         </div>
       </div>
 
-      <input type="submit" name="" value="开始考试">
+      <!-- <input type="submit" name="" value="开始考试"> -->
+      <a href="/exams/1/instructions/1">开始考试</a>
     </form>
   </div>
   <div class="tips">建议：模考期间建议您将可能给您考试带来干扰的设备或软件调至静音状态。</div>
   <div class="bottom-bar">
-    <div class="btn-help">
+    <div class="btn-help left">
       <i></i>
       <span><u>H</u>elp</span>
     </div>
-    <div class="btn-end">
+    <div class="btn-end left">
       <i></i>
       <span><u>E</u>nd Exam</span>
     </div>
