--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -6,20 +6,48 @@ $yellow: #fefe00;
 }
 
 .exam-main {
-  width: 100%;
-  height: 100%;
-  max-width: 1024px;
-  min-width: 1000px;
+  width: 1024px;
   background: $blue;
   position: relative;
   margin: 30px auto 20px auto;
 
   .header {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 45px;
+    // font-size: 18px;
+    // font-weight: bold;
+    // line-height: 45px;
     padding-left: 8px;
     color: white;
+    overflow: hidden;
+
+    h1 {
+      font-size: 18px;
+      line-height: 45px;
+      margin: 0;
+    }
+
+    .right {
+      font-size: 14px;
+      font-weight: bold;
+      float: right;
+      margin-top: -40px;
+      padding-right: 20px;
+
+      i {
+        width: 20px;
+        height: 18px;
+        display: inline-block;
+        vertical-align: bottom;
+        margin-right: 4px;
+      }
+
+      .clock i {
+        background: url(http://oya5a097g.bkt.clouddn.com/clock.png) center center no-repeat;
+      }
+
+      .location i {
+        background: url(http://oya5a097g.bkt.clouddn.com/location.png) center center no-repeat;
+      }
+    }
   }
 
   .top-bar {
