--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -385,3 +385,67 @@ $yellow: #fefe00;
   height: 30px;
   background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -365px -45px no-repeat;
 }
+
+.dialog {
+  width: 344px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -177px;
+  margin-top: -120px;
+  z-index: 999;
+  background: #006eae;
+  color: #fff;
+  padding-bottom: 27px;
+  border: 1px solid #fff;
+
+  .title {
+    height: 39px;
+    padding: 0 14px;
+    line-height: 39px;
+    overflow: hidden;
+    border-bottom: 1px solid #fff;
+  }
+
+  .close {
+    width: 16px;
+    height: 39px;
+    float: right;
+    background: url(http://oya5a097g.bkt.clouddn.com/close.png) center center no-repeat;
+    cursor: pointer;
+  }
+
+  .body {
+    padding: 0 14px;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .dialog-close {
+    border: 1px solid #fff;
+    padding: 4px 18px;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    position: relative;
+    display: inline-block;
+  }
+
+  .dialog-close:before {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    border: 1px solid white;
+  }
+
+  .dialog-close:hover {
+    color: $yellow;
+  }
+}
