--- a/app/views/exams/_unanwsered_dialog.html.erb
+++ b/app/views/exams/_unanwsered_dialog.html.erb
@@ -4,7 +4,9 @@
     <i class="close"></i>
   </div>
   <div class="body">
-    <p>You cannot leave this question unanwsered!</p>
-    <a href="#" class="dialog-close">O<u>K</u></a>
+    <div>You cannot leave this question unanwsered!</div>
+  </div>
+  <div class="footer">
+    <a href="#" class="dialog-close bordered">O<u>K</u></a>
   </div>
 </div>
