--- a/app/views/exams/exercise.html.erb
+++ b/app/views/exams/exercise.html.erb
@@ -1,30 +1,12 @@
 <div class="exam-main">
-  <div class="header">
-    <h1>Exam name</h1>
-    <div class="right">
-      <div class="clock"><i></i>Time cost 66:55</div>
-      <div class="location"><i></i>Location 1 of 37</div>
-    </div>
+  <%= render 'exams/exercise_header' %>
 
-  </div>
   <div class="top-bar"></div>
   <div class="content">
     <%= render "exams/exercise", locals: { exercise: @exercise } %>
   </div>
-  <div class="bottom-bar">
-    <a class="btn-help left" href="#">
-      <i></i>
-      <span><u>H</u>elp</span>
-    </a>
-    <a class="btn-end left" href="#">
-      <i></i>
-      <span><u>E</u>nd Exam</span>
-    </a>
-    <a class="btn-next right" href="/exams/1/instructions/<%= (@page_id.to_i + 1) %>">
-      <span><u>N</u>ext</span>
-      <i></i>
-    </a>
-  </div>
+
+  <%= render "exams/exercise_footer" %>
 </div>
 
-<%= render 'exams/unanwsered_dialog' %>
+<%= render 'exams/end_exam_dialog' %>
