--- a/app/views/exams/_intro_footer.html.erb
+++ b/app/views/exams/_intro_footer.html.erb
@@ -11,7 +11,7 @@
     <span><u>N</u>ext</span>
     <i></i>
   </a>
-  <a class="btn-skip right" href="#">
+  <a class="btn-skip right" href="/exams/1/exercises/7">
     <span>跳过说明</span>
   </a>
 </div>
