--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,5 +1,5 @@
 <div class="exam-main">
-  <div class="header">[练习]SC-OG：第1-20题</div>
+  <div class="header"><h1>Exam name</h1></div>
   <div class="top-bar"></div>
   <div class="content">
     <h1>欢迎使用 GMAT770 模考系统</h1>
@@ -23,7 +23,7 @@
       </div>
 
       <!-- <input type="submit" name="" value="开始考试"> -->
-      <a href="/exams/1/instructions/1">开始考试</a>
+      <a href="/exams/1/instructions/1" class="start-exam">开始考试</a>
     </form>
   </div>
   <div class="tips">建议：模考期间建议您将可能给您考试带来干扰的设备或软件调至静音状态。</div>
