--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -21,9 +21,7 @@
           <input type="radio" name="seq"> Q -> V
         </div>
       </div>
-
-      <!-- <input type="submit" name="" value="开始考试"> -->
-      <a href="/exams/1/instructions/1" class="start-exam">开始考试</a>
+      <a href="/exams/<%= @exam_id %>/instructions/1" class="start-exam">开始考试</a>
     </form>
   </div>
   <div class="tips">建议：模考期间建议您将可能给您考试带来干扰的设备或软件调至静音状态。</div>
