--- a/app/views/exams/_exercise_header.html.erb
+++ b/app/views/exams/_exercise_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <h1>Exam name</h1>
   <div class="right">
-    <div class="clock"><i></i>Time cost 66:55</div>
-    <div class="location"><i></i>Location 1 of 37</div>
+    <div class="clock"><i></i>Time cost <%= @exam.estimated_time %>:00</div>
+    <div class="location"><i></i>Location 1 of <%= @exam.exercise_ids.length %></div>
   </div>
 </div>
